<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthenticationActivity.MobileActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:layout_marginTop="88dp"
        android:fontFamily="EuropaNuova"
        android:text="@string/mob_hi_there"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="198dp"
        android:layout_height="26dp"
        android:layout_marginTop="6dp"
        android:fontFamily="EuropaNuova"
        android:text="@string/mob_enter_phno"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="302dp"
        android:layout_height="54dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/mobile_no_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:id="@+id/mobileedttxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/areacode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="EuropaNuova-Regular"
                android:textColor="#15135B"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/phnoinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:digits="0123456789+"
                android:fontFamily="EuropaNuova-Regular"
                android:hint="@string/mob_enter_phno"
                android:inputType="phone"
                android:textColor="#8015135B" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/rlt1"
        android:layout_width="304dp"
        android:layout_height="18dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="EuropaNuova-Regular"
        android:text="@string/mob_four_digit_code"
        android:textColor="#B315135B"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <Button
        android:id="@+id/nxtbutton"
        android:layout_width="194dp"
        android:layout_height="49dp"
        android:layout_below="@id/rlt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/start_rounded_button"
        android:fontFamily="EuropaNuova"
        android:text="@string/mob_next"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlt1"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>