<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthenticationActivity.VerificationActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="EuropaNuova"
        android:text="@string/ver_txtverification"
        android:textColor="#15135B"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterotptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="EuropaNuova"
        android:text="@string/ver_enter_otp"
        android:textColor="#9915135B"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:id="@+id/otp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterotptxt">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="EuropaNuova-Regular"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#15135B"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="EuropaNuova-Regular"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#15135B"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="EuropaNuova-Regular"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#15135B"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="EuropaNuova-Regular"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#15135B"
            android:textSize="30dp" />


        <EditText
            android:id="@+id/otp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="EuropaNuova-Regular"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#15135B"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/otp6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="EuropaNuova-Regular"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#15135B"
            android:textSize="30dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/noreceiveotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="EuropaNuova-Regular"
        android:text="@string/ver_no_receiveotp"
        android:textColor="#9915135B"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <TextView
        android:id="@+id/resendotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="EuropaNuova-Regular"
        android:text="@string/resendotp"
        android:textColor="@color/linkblue"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noreceiveotp" />

    <Button
        android:id="@+id/submitotp"
        android:layout_width="194dp"
        android:layout_height="49dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/start_rounded_button"
        android:fontFamily="EuropaNuova"
        android:text="@string/ver_submit"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendotp" />

</androidx.constraintlayout.widget.ConstraintLayout>